// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should match snapshot 1`] = `
<section
  class="relative px-6 min-h-screen section-navbar-offset bg-white"
  id="test-section"
>
  <div
    class="flex flex-col justify-center py-20"
  >
    <div>
      Test content
    </div>
  </div>
</section>
`;

exports[`Section should match snapshot with gradient 1`] = `
<section
  class="relative px-6 min-h-screen section-navbar-offset bg-gradient-to-br from-gray-50 to-gray-100 custom-hero"
  id="test-section"
>
  <div
    class="flex flex-col justify-center py-20"
  >
    <div>
      Test content
    </div>
  </div>
</section>
`;
